k8s/todo-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-api
  namespace: devops-final
  labels:
    app: todo-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-api
  template:
    metadata:
      labels:
        app: todo-api
    spec:
      imagePullSecrets:
        - name: nexus-regcred
      containers:
        - name: todo-api
          image: ec2-34-228-135-216.compute-1.amazonaws.com:8083/todo-api:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
          volumeMounts:
            - name: app-data
              mountPath: /app/data
          readinessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 5
            periodSeconds: 30
          livenessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 15
            periodSeconds: 30
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 300m
              memory: 256Mi
      volumes:
        - name: app-data
          persistentVolumeClaim:
            claimName: todo-api-data
