k8s/grafana-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: devops-final
spec:
  selector:
    app: grafana
  ports:
    - name: http
      port: 3000
      targetPort: 3000
      nodePort: 32000
  type: NodePort
