k8s/todo-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-api
  namespace: devops-final
  labels:
    app: todo-api
spec:
  selector:
    app: todo-api
  ports:
    - name: http
      port: 80
      targetPort: 5000
  type: ClusterIP
